add prd for code generation for pulumi libraries

--- a/sdk/AzureNative/src/Hyprx.Pulumi.AzureNative.csproj
+++ b/sdk/AzureNative/src/Hyprx.Pulumi.AzureNative.csproj
@@ -22,4 +22,17 @@
     <None Condition="Exists('$(IconPath)')" Include="$(IconPath)" Pack="true" PackagePath="\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Pulumi" />
+    <PackageReference Include="Pulumi.AzureNative" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../../Pulumi/*.csproj" />
+    <ProjectReference Include="../../FluentBuilder/*.csproj" PrivateAssets="all" 
+      OutputItemType="Analyzer"
+      ReferenceOutputAssembly="false"
+     />
+  </ItemGroup>
+
 </Project>
