--- a/sdk/Pulumi/src/Hyprx.Pulumi.csproj
+++ b/sdk/Pulumi/src/Hyprx.Pulumi.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">  
   <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <RootNamespace>Hyprx.Pulumi</RootNamespace>
+    <TargetFramework>$(FX)</TargetFramework>
+    <RootNamespace>Pulumi</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup>
