--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -22,8 +22,23 @@
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
 
     <PackageVersion Include="Polyfill" Version="7.33.0" />
-    <PackageVersion Include="Pulumi" Version="3.84.0" />
-    <PackageVersion Include="Pulumi.AzureNative" Version="3.5.1" />
+    <PackageVersion Include="Pulumi" Version="[3.84.0, 4)" />
+    <PackageVersion Include="Pulumi.Acme" Version="[0.10.0,)" />
+    <PackageVersion Include="Pulumi.AzureNative" Version="[3.5.1, 4)" />
+    <PackageVersion Include="Pulumi.AzureAd" Version="[6.5.1,)" />
+    <PackageVersion Include="Pulumi.AzureDevOps" Version="[3.10.0,)" />
+    <PackageVersion Include="Pulumi.Cloudflare" Version="[6.3.1, )" />
+    <PackageVersion Include="Pulumi.Command" Version="[1.1.0,)" />
+    <PackageVersion Include="Pulumi.Docker" Version="[4.8.0,)" />
+    <PackageVersion Include="Pulumi.DigitalOcean" Version="[4.47.0,)" />
+    <PackageVersion Include="Pulumi.GitHub" Version="[6.7.2,)" />
+    <PackageVersion Include="Pulumi.Libvirt" Version="[0.5.4,)" />
+    <PackageVersion Include="Pulumi.ProxmoxVE" Version="[7.1.0,)" />
+    <PackageVersion Include="Pulumi.Random" Version="[4.18.2,)" />
+    <PackageVersion Include="Pulumi.Slack" Version="[0.4.12,)" />
+    <PackageVersion Include="Pulumi.TlsSelfSignedCert" Version="[0.1.3,)" />
+    <PackageVersion Include="Pulumi.Unifi" Version="[0.1.1,]" />
+    <PackageVersion Include="Pulumi.Vault" Version="[6.7.1,)" />
     <PackageVersion Include="ReflectionAnalyzers" Version="0.3.1"/>
     <PackageVersion Include="SecurityCodeScan.VS2019" Version="5.6.7"/>
 
